<?xml version="1.0" encoding="utf-8"?>
<LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_between_fields">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/showing_data_for"
            android:textColor="@color/black"
            android:layout_marginStart="100dp"/>

        <TextView
            android:id="@+id/usernameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/start_margin"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_between_fields">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:textColor="@color/black"
            android:text="@string/number_of_trips"/>

        <TextView
            android:id="@+id/noOfTripsTV"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/start_margin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:text="@string/average_speed"/>

        <TextView
            android:id="@+id/averageSpeedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/start_margin"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_between_fields">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:textColor="@color/black"
            android:text="@string/total_time"/>

        <TextView
            android:id="@+id/totalTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/start_margin"
            />


    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/space_between_fields">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:textColor="@color/black"
        android:text="@string/total_distance_travelled"/>

    <TextView
        android:id="@+id/totalDistanceTravelledTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/start_margin"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_between_fields">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:textColor="@color/black"
            android:text="@string/total_danger_time"/>

        <TextView
            android:id="@+id/totalDangerousTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/start_margin"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_between_fields">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:textColor="@color/black"
            android:text="@string/average_time_per_trip"/>

        <TextView
            android:id="@+id/AverageTimePerTripTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/start_margin"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_between_fields">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:textColor="@color/black"
            android:text="@string/average_distance_travelled_per_trip"/>

        <TextView
            android:id="@+id/AverageTravelledDistancePerTripTV"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/start_margin"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_between_fields">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin"
            android:textColor="@color/black"
            android:text="@string/average_danger_driving_time_per_trip"/>

        <TextView
            android:id="@+id/AverageDangerTimePerTripTV"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/start_margin"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp">

        <Button
            android:id="@+id/statsBackBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="100dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/statsNextBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="100dp"
            android:text="@string/next" />

    </RelativeLayout>


</LinearLayout>